log
Thu 20 Apr 2023 08:32:35 PM UTC: 
 tests:  1|8
total_score: 0/70
c4653dd
Thu 20 Apr 2023 08:40:49 PM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  1|8
total_score: 0/70
7f62eee
Thu 20 Apr 2023 08:41:36 PM UTC: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
ee93fb8
Thu 20 Apr 2023 08:49:52 PM UTC: 
 treemap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:56:29: error: implicit declaration of function ‘createNode’; did you mean ‘createTreeNode’? [-Werror=implicit-function-declaration]
   56 |         TreeNode* auxNode = createNode(tree->root->pair->key, tree->root->pair->value);
      |                             ^~~~~~~~~~
      |                             createTreeNode
treemap.c:56:29: error: initialization of ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
treemap.c:56:19: error: unused variable ‘auxNode’ [-Werror=unused-variable]
   56 |         TreeNode* auxNode = createNode(tree->root->pair->key, tree->root->pair->value);
      |                   ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
d8e1acc
Thu 20 Apr 2023 08:50:05 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:56:19: error: unused variable ‘auxNode’ [-Werror=unused-variable]
   56 |         TreeNode* auxNode = createTreeNode(tree->root->pair->key, tree->root->pair->value);
      |                   ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0ccf714
Thu 20 Apr 2023 08:51:00 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
c76a7e1
Thu 20 Apr 2023 08:58:47 PM UTC: 
 treemap.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
 tests:  0|0
956e1bc
Thu 20 Apr 2023 09:05:11 PM UTC: 
 treemap.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
 tests:  0|0
b65ec9c
Thu 20 Apr 2023 09:06:08 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
ec32e23
Thu 20 Apr 2023 09:07:11 PM UTC: 
 treemap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|0
63e884f
Thu 20 Apr 2023 09:09:24 PM UTC: 
 treemap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  0|0
1b6738f
Thu 20 Apr 2023 09:11:43 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  3|7
total_score: 5/70
7c7ce91
